# android_light

./: .gitmodules  LICENSE  README.md  config.sh  parse_args.sh  run.sh  setup.sh
editor/: CMakeLists.txt  run.sh
editor/include/: editor.h
editor/libs/: CMakeLists.txt
editor/src/: draw.cpp  editor.cpp  imgui_window.cpp  layouts.cpp  main.cpp  serialization.cpp  utils.cpp
template/: AndroidManifest.xml
template/java/example/myapp/: MainActivity.java
template/jni/: CMakeLists.txt  myapp.cpp  myapp.h
template/res/layout/: activity_main.xml
template/src/: CMakeLists.txt  example_myapp_MainActivity.h  myapp.cpp
